[package]
name = "matchingram"
version = "0.1.0-dev"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
phf = { version = "0.8", features = ["macros"] }
strum = "0.19"
strum_macros = "0.19"