[package]
name = "matchingram"
version = "0.1.0-dev"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["json"]
json = ["serde_json"]


[dependencies]
thiserror = "1.0"
strum = "0.19"
strum_macros = "0.19"
derivative = "2.1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", optional = true }
lazy_static = "1.4.0"
maplit = "1.0.2"